SERVER-54803 Only register _queryProcessor once in StreamableRSM